[gd_scene load_steps=4 format=2]

[ext_resource path="res://TemporalvFrustration.gd" type="Script" id=1]
[ext_resource path="res://black_background.jpg" type="Texture" id=2]
[ext_resource path="res://TemporalVFrustrationCheck.tres" type="ButtonGroup" id=3]

[node name="TemporalvFrustration" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 312.0
margin_top = 37.5
margin_right = 712.0
margin_bottom = 562.5
rect_min_size = Vector2( 400, 525 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
margin_left = 35.0
margin_top = 60.0
margin_right = 365.0
margin_bottom = 480.0
rect_min_size = Vector2( 330, 420 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="NinePatchRect/VBoxContainer"]
margin_right = 330.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "Click the factor that represents the more important contributor to workload for the task."

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 34.0
margin_right = 330.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 30 )

[node name="Temporal" type="CheckBox" parent="NinePatchRect/VBoxContainer"]
margin_top = 68.0
margin_right = 330.0
margin_bottom = 92.0
group = ExtResource( 3 )
text = "Temporal Demand"

[node name="RichTextLabel2" type="RichTextLabel" parent="NinePatchRect/VBoxContainer"]
margin_top = 96.0
margin_right = 330.0
margin_bottom = 156.0
rect_min_size = Vector2( 0, 60 )
text = "How much time pressure did you feel due to the rate of pace at which the tasks or task elements occurred? Was the pace slow and leisurely or rapid and frantic?"

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 160.0
margin_right = 330.0
margin_bottom = 175.0
rect_min_size = Vector2( 0, 15 )

[node name="Frustration" type="CheckBox" parent="NinePatchRect/VBoxContainer"]
margin_top = 179.0
margin_right = 330.0
margin_bottom = 203.0
group = ExtResource( 3 )
text = "Frustration Level"

[node name="RichTextLabel3" type="RichTextLabel" parent="NinePatchRect/VBoxContainer"]
margin_top = 207.0
margin_right = 330.0
margin_bottom = 252.0
rect_min_size = Vector2( 0, 45 )
text = "How insecure, discouraged, irritated, stressed, and annoyed versus secure, gratified, content, relaxed, and complacent did you feel during the task?"

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 256.0
margin_right = 330.0
margin_bottom = 381.0
rect_min_size = Vector2( 0, 125 )

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 385.0
margin_right = 330.0
margin_bottom = 405.0
alignment = 1

[node name="BackButton" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 95.0
margin_right = 137.0
margin_bottom = 20.0
text = "Back"

[node name="Button" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 141.0
margin_right = 183.0
margin_bottom = 20.0
text = "Next"

[node name="MenuButton" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 187.0
margin_right = 235.0
margin_bottom = 20.0
text = "Menu"
[connection signal="toggled" from="NinePatchRect/VBoxContainer/Temporal" to="." method="_on_Temporal_toggled"]
[connection signal="toggled" from="NinePatchRect/VBoxContainer/Frustration" to="." method="_on_Frustration_toggled"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="button_up" from="NinePatchRect/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_button_up"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
